[gd_scene load_steps=2 format=3 uid="uid://..."]

[ext_resource type="Script" path="res://Resources/UI/TutorialOverlay.gd" id="1_..."]

[node name="TutorialOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_...")

[node name="ContentPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 300.0
offset_bottom = 150.0

[node name="MarginContainer" type="MarginContainer" parent="ContentPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ContentPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ContentLabel" type="RichTextLabel" parent="ContentPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Tutorial content goes here"

[node name="ButtonContainer" type="HBoxContainer" parent="ContentPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="NextButton" type="Button" parent="ContentPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Next"

[node name="SkipButton" type="Button" parent="ContentPanel/MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Skip" 